Added a pluggable architecture. The initial uses of this architecture will be to provide field types and database functionality as plugins. The architecture allows for plugins to be used for other logic as future needs dictate.
Started the Transaction work:
- Basic insert functionality

Started the type/string plugin

Started the db/ejdb plugin

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     },
     "author": "John Johnson II",
     "license": "BSD-2-Clause",
+    "dependencies" : {
+        "q" : "latest"
+    },
     "devDependencies" : {
         "gulp" : "latest",
         "gulp-util" : "latest",
@@ -15,6 +18,7 @@
         "gulp-mocha" : "latest",
         "gulp-istanbul" : "latest",
         "chai" : "latest",
-        "sinon" : "latest"
+        "sinon" : "latest",
+        "ejdb" : "latest"
     }
 }
